修改界面toast显示

--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -500,7 +500,7 @@
 											index: 1
 										});
 									} else {
-										mui.toast('无此功能');
+										mui.toast('无权限');
 									}
 								}
 							} else if(personal.urolestrxxt > 1) { //授权用户
