--- a/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
@@ -240,7 +240,7 @@
 						if(tempStuArray.length > 0) {
 							tempStu = tempStu.substr(1);
 						} else {
-							mui.toast('请选择年级、班级');
+							mui.toast('请选择家长');
 							return;
 						}
 
