--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -222,7 +222,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-media-body replyName">
 								<img v-if="model.ReplyManImg==null||model.ReplyManImg==''" class="mui-media-object mui-pull-left peopleImg" src='../../img/noImgPerson.jpg'> {{model.ReplyManName}}
-								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReplyManImg> {{model.ReplyManName}}
+								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReplyManImg> {{model.ReplyManName}}的家长
 								<p class="mui-ellipsis replyTime">{{model.ReplyTime}}</p>
 								<p class="replyContent" style="padding-left: 52px;">{{model.ReplyContent}}</p>
 							</div>
@@ -236,7 +236,7 @@
 								<img v-if="model.ReceiveManImg==null||model.ReceiveManImg==''" class="mui-media-object mui-pull-left peopleImg" src='../../img/noImgPerson.jpg'>
 								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReceiveManImg>
 								<div class="mui-media-body replyName">
-									{{model.ReceiveManName}}
+									{{model.ReceiveManName}}的家长
 									<p class="mui-ellipsis replyTime">{{model.ReadTime}}</p>
 								</div>
 							</a>
@@ -250,7 +250,7 @@
 								<img v-if="model.ReceiveManImg==null||model.ReceiveManImg==''" class="mui-media-object mui-pull-left peopleImg" src='../../img/noImgPerson.jpg'>
 								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReceiveManImg>
 								<div class="mui-media-body replyName" style="padding-top: 10px;">
-									{{model.ReceiveManName}}
+									{{model.ReceiveManName}}的家长
 								</div>
 							</a>
 						</li>
