--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -222,7 +222,7 @@
 						<li class="mui-table-view-cell">
 							<div class="mui-media-body replyName">
 								<img v-if="model.ReplyManImg==null||model.ReplyManImg==''" class="mui-media-object mui-pull-left peopleImg" src='../../img/noImgPerson.jpg'> {{model.ReplyManName}}
-								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReplyManImg> {{model.ReplyManName}}的家长
+								<img v-else="" class="mui-media-object mui-pull-left peopleImg" :src=model.ReplyManImg> {{model.ReplyManName}}
 								<p class="mui-ellipsis replyTime">{{model.ReplyTime}}</p>
 								<p class="replyContent" style="padding-left: 52px;">{{model.ReplyContent}}</p>
 							</div>
