--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -244,7 +244,7 @@
 							if(permission){
 								plus.webview.open('../../index.html');
 							}else{//游客身份
-								plus.webview.open('noPermissions.html');
+								plus.webview.open('../../index2.html');
 							}
 							
 							var curr = plus.webview.currentWebview();
