--- a/HomeSchoolInteraction/html/login/loginFnoPermissions.html
+++ b/HomeSchoolInteraction/html/login/loginFnoPermissions.html
@@ -19,7 +19,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;">
-			<a  class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<!--<a  class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>-->
 			<h1 class="mui-title" style="color: white;">登录</h1>
 		</header>
 		<div class="mui-content">
@@ -240,7 +240,7 @@
 //										plus.webview.close(wvs[i]);
 //									}
 //								}
-								plus.webview.open('noPermissions.html');
+								plus.webview.open('../../index2.html');
 							}
 							
 							var curr = plus.webview.currentWebview();
