--- a/HomeSchoolInteraction/html/login/firstPage.html
+++ b/HomeSchoolInteraction/html/login/firstPage.html
@@ -179,7 +179,7 @@
 									//											mui.toast(data.RspTxt);
 								}
 							});
-							if(personal.utid=='0'){
+							if(personal.utid=='0'){//无权限
 								plus.webview.open('../../index2.html');
 							}else{
 								utils.mOpenWithData("../../index.html", personal);
