--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -19,7 +19,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav" style="background-color:#00CFBD;">
-			<a  class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
+			<!--<a  class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>-->
 			<h1 class="mui-title" style="color: white;">登录</h1>
 		</header>
 		<div class="mui-content">
