--- a/HomeSchoolInteraction/html/homeSchool/mine.html
+++ b/HomeSchoolInteraction/html/homeSchool/mine.html
@@ -87,15 +87,19 @@
 				unbindPro(tempBindData, function function_name(data) {
 					if(data.RspCode == 0) {} else {}
 				});
+				//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
+				utils.setBadgeNumber(0,0);
 
 				//获取所有已打开的webview 实例————重新打开login.html————循环关闭页面
 				store.remove(window.storageKeyName.PERSONALINFO);
-				plus.webview.open('../../html/login/loginIndex.html');
+//				plus.webview.open('../../html/login/loginIndex.html');
+				plus.webview.open('../../html/login/firstPage.html');
 				var curr = plus.webview.currentWebview();
 				var wvs = plus.webview.all();
 				for(var i = 0, len = wvs.length; i < len; i++) {
 					//关闭除login页面外的其他页面
-					if(wvs[i].getURL().indexOf('loginIndex.html') != -1) {
+					if(wvs[i].getURL().indexOf('firstPage.html') != -1) {
+//					if(wvs[i].getURL().indexOf('loginIndex.html') != -1) {
 						continue;
 					}
 					plus.webview.close(wvs[i]);
