--- a/HomeSchoolInteraction/html/homeSchool/noticeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeList.html
@@ -36,6 +36,10 @@
 				-webkit-box-orient: vertical;
 				margin-right: 10px;
 			}
+			
+			.mui-content>.mui-table-view:first-child {
+				margin-top: -1px;
+			}
 		</style>
 	</head>
 
@@ -45,57 +49,38 @@
 			<h1 class="mui-title" style="color: white;">学校通知</h1>
 			<a v-if="personal.appxxtservstat>0" @click="revoke()" class="mui-pull-right" style="color: white;font-size: 25px;margin-top: 10px;">+</a>
 		</header>
-		<div v-show="showFlag>0" class="mui-content" id="noticelistData" style="margin-top: -40px;">
-			<ul class="mui-table-view" v-for="(noticeModel,index) in noticeArray">
-				<li class="mui-table-view-cell" @click="clickNoticeList(noticeModel)">
-					<div class="mui-navigate-right">
-						<div id="" v-if="noticeModel.IsRead==0&&noticeModel.NoticeType==1">
-							<image src="../../img/homeSchool/redColor.png" style="width: 7px;height: 7px;border-radius: 50%;" />
-							<p style="font-size: 15px;color: #333333;margin-top: -17px;margin-left: 12px;word-break: break-all;">{{noticeModel.NoticeContent}}</p>
-						</div>
-						<div id="" v-else="">
-							<p style="font-size: 15px;color: #333333;margin-left: 0px;word-break: break-all;">{{noticeModel.NoticeContent}}</p>
-						</div>
-						<div class="">
-							<image v-if="noticeModel.SendManImg==null" src='../../img/noImgPerson.jpg' style="width: 15px;height: 15px;border-radius: 50%;vertical-align: middle;" />
-							<image v-else="" :src=noticeModel.SendManImg style="width: 15px;height: 15px;border-radius: 50%;vertical-align: middle;" />
-							<span class="nameTime">{{noticeModel.SendManName}}  {{noticeModel.SendTime}}</span>
+		<div v-show="showFlag>0" class="mui-content mui-scroll-wrapper mui-fullscreen" id="noticelistData" style="display: none;">
+			<div class="mui-scroll">
+				<ul class="mui-table-view" v-for="(noticeModel,index) in noticeArray">
+					<li class="mui-table-view-cell" @click="clickNoticeList(noticeModel)">
+						<div class="mui-navigate-right">
+							<div id="" v-if="noticeModel.IsRead==0&&noticeModel.NoticeType==1">
+								<image src="../../img/homeSchool/redColor.png" style="width: 7px;height: 7px;border-radius: 50%;" />
+								<p style="font-size: 15px;color: #333333;margin-top: -17px;margin-left: 12px;word-break: break-all;">{{noticeModel.NoticeContent}}</p>
+							</div>
+							<div id="" v-else="">
+								<p style="font-size: 15px;color: #333333;margin-left: 0px;word-break: break-all;">{{noticeModel.NoticeContent}}</p>
+							</div>
+							<div class="">
+								<image v-if="noticeModel.SendManImg==null" src='../../img/noImgPerson.jpg' style="width: 15px;height: 15px;border-radius: 50%;vertical-align: middle;" />
+								<image v-else="" :src=noticeModel.SendManImg style="width: 15px;height: 15px;border-radius: 50%;vertical-align: middle;" />
+								<span class="nameTime">{{noticeModel.SendManName}}  {{noticeModel.SendTime}}</span>
 
+							</div>
+							<div id="" v-if="noticeModel.ReadCnt==0&&noticeModel.ReplyCnt==0&&noticeModel.SendManId==personal.utid&&noticeModel.SmsSync==0" style="float: right;margin-right: 10px;margin-top: -23px">
+								<button @click.stop="deleteNotice(noticeModel)" type="button" style="width: 50px;border: 0px;font-size: 12px;color: #ff6666;">删除</button>
+							</div>
+							<div id="" v-else="" style="float: right;margin-right: 10px;margin-top: -22px;">
+								<image src='../../img/homeSchool/lookCount.png' style="width: 10px;height: 10px;border-radius: 50%;" />
+								<span class="nameTime">{{noticeModel.ReadCnt}}</span>
+								<image src="../../img/homeSchool/contentCount.png" style="width: 10px;height: 10px;border-radius: 50%;" />
+								<span class="nameTime" style="padding-right: 10px;">{{noticeModel.ReplyCnt}}</span>
+							</div>
 						</div>
-						<div id="" v-if="noticeModel.ReadCnt==0&&noticeModel.ReplyCnt==0&&noticeModel.SendManId==personal.utid&&noticeModel.SmsSync==0" style="float: right;margin-right: 10px;margin-top: -23px">
-							<button @click.stop="deleteNotice(noticeModel)" type="button" style="width: 50px;border: 0px;font-size: 12px;color: #ff6666;">删除</button>
-						</div>
-						<div id="" v-else="" style="float: right;margin-right: 10px;margin-top: -22px;">
-							<image src='../../img/homeSchool/lookCount.png' style="width: 10px;height: 10px;border-radius: 50%;" />
-							<span class="nameTime">{{noticeModel.ReadCnt}}</span>
-							<image src="../../img/homeSchool/contentCount.png" style="width: 10px;height: 10px;border-radius: 50%;" />
-							<span class="nameTime" style="padding-right: 10px;">{{noticeModel.ReplyCnt}}</span>
-						</div>
-					</div>
-				</li>
-			</ul>
+					</li>
+				</ul>
+			</div>
 		</div>
-
-		<!--<div class="mui-content" style="margin-top: -40px;">
-			<ul class="mui-table-view">
-				<li class="mui-table-view-cell" >
-					<div class="mui-navigate-right">
-						<div id="">
-							<image src="../../img/homeSchool/redColor.png" style="width: 7px;height: 7px;border-radius: 50%;" />
-							<p style="font-size: 15px;color: #333333;margin-top: -17px;margin-left: 12px;">11111111</p>
-						</div>
-						<div class="">
-							<image :src=noticeModel.SendManImg style="width: 15px;height: 15px;border-radius: 50%;vertical-align: middle;" />
-							<span class="nameTime">222222222222</span>
-
-						</div>
-						<div id="" style="float: right;margin-right: 10px;margin-top: -33px">
-							<button @click.stop="deleteNotice(noticeModel)" type="button" style="width: 50px;border: 0px;font-size: 12px;color: #ff6666;">删除</button>
-						</div>
-					</div>
-				</li>
-			</ul>
-		</div>-->
 
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/vue.min.js"></script>
@@ -124,16 +109,24 @@
 				pullRefresh: {
 					container: '#noticelistData',
 					down: {
-						style: 'circle',
-						callback: pulldownRefresh
+						style: 'circle', //必选，下拉刷新样式，目前支持原生5+ ‘circle’ 样式
+						color: '#2BD009', //可选，默认“#2BD009” 下拉刷新控件颜色
+						height: '50px', //可选,默认50px.下拉刷新控件的高度,
+						range: '100px', //可选 默认100px,控件可下拉拖拽的范围
+						offset: '0px', //可选 默认0px,下拉刷新控件的起始位置
+						auto: true, //可选,默认false.首次加载自动上拉刷新一次
+						callback: pulldownRefresh //必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
 					},
 					up: {
-						auto: true,
-						contentrefresh: '正在加载...',
-						callback: pullupRefresh
+						height: 50, //可选.默认50.触发上拉加载拖动距离
+						auto: true, //可选,默认false.自动上拉加载一次
+						contentrefresh: "正在加载...", //可选，正在加载状态时，上拉加载控件上显示的标题内容
+						contentnomore: '没有更多数据了', //可选，请求完毕若没有更多数据时显示的提醒内容；
+						callback: pullupRefresh //必选，刷新函数，根据具体业务来编写，比如通过ajax从服务器获取新数据；
 					}
 				}
 			});
+			$("#noticelistData").hide();
 			mui.plusReady(function() {
 				curPage = utils.getDataFromUrl(window.location.href);
 				console.log('2222:' + JSON.stringify(curPage));
@@ -151,6 +144,7 @@
 			 * 下拉刷新具体业务实现
 			 */
 			function pulldownRefresh() {
+//				mui('#noticelistData').pullRefresh().refresh(true);
 				noticelistData.flag = 0;
 				noticelistData.pageIndex = 1;
 				//4.获取学校通知列表
@@ -160,7 +154,7 @@
 			var noticelistData = new Vue({
 				el: "#noticelistData",
 				data: {
-					showFlag:0,//1有数据，0无数据
+					showFlag: 0, //1有数据，0无数据
 					flag: 0, //0刷新，1加载更多
 					noticeArray: [], //通知列表数组
 					pageIndex: 1 //第几页
@@ -173,7 +167,7 @@
 						//让首页的未读数减1
 						if(model.IsRead == 0 && mode.NoticeType == 1) {
 							//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
-							utils.setBadgeNumber(1,0);
+							utils.setBadgeNumber(1, 0);
 						}
 					},
 					deleteNotice: function(noticeModel) {
@@ -195,7 +189,6 @@
 								});
 							}
 						}, 'div')
-
 					}
 				}
 			});
@@ -228,14 +221,14 @@
 					pageIndex: noticelistData.pageIndex, //当前页数
 					pageSize: 10 //每页记录数,0为全部
 				}
-				events.showWaiting();
+				//				events.showWaiting();
 				getNoticesPro(tempData, function function_name(data) {
-					events.closeWaiting();
+					//					events.closeWaiting();
 					mui('#noticelistData').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
 					mui('#noticelistData').pullRefresh().endPulldownToRefresh();
 					console.log('data:' + JSON.stringify(data));
 					if(data.RspCode == 0) {
-						
+
 						noticelistData.pageIndex++;
 						for(var i = 0; i < data.RspData.Data.length; i++) {
 							var model = data.RspData.Data[i];
@@ -243,16 +236,18 @@
 						}
 						if(noticelistData.flag == 0) { //刷新
 							noticelistData.noticeArray = data.RspData.Data;
-							if (data.RspData.Data.length==0) {
+							if(data.RspData.Data.length == 0) {
 								mui.toast('数据为空');
 							}
 						} else { //加载更多
 							noticelistData.noticeArray = noticelistData.noticeArray.concat(data.RspData.Data);
-							if (data.RspData.Data.length==0) {
+							if(data.RspData.Data.length == 0) {
 								mui.toast('已加载全部');
+								mui('#noticelistData').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
 							}
 						}
 						noticelistData.showFlag = 1;
+						$("#noticelistData").show();
 					} else {
 						mui.toast(data.RspTxt);
 					}
